# CPP_proj

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  some_note.md
Basic_prac/: 1.cpp  2d_vector_prac.cpp  OOP_test1.cpp  bondini.cpp  cin_out.cpp  cstringio_example.cpp  divide.cpp  draft.cpp  draft_2.cpp  ep-7-7.6.cpp  ep2_prac.cpp  ep2_prac_2.cpp  ep2_prac_3.cpp  ep3_prac_1.cpp  ep3_prac_2.cpp  ep3_prac_3.cpp  ep4_prac_1.cpp  ep4_prac_2.cpp  ep4_prac_3.cpp  ep4_prac_4.cpp  ep4_prac_5.cpp  ep4_prac_6.cpp  ep5_5.18.cpp  ep5_prac_1.cpp  ep5_prac_2.cpp  ep5_prac_3.cpp  ep5_prac_4.cpp  ep5_prac_5.cpp  ep5_prac_6.cpp  ep5_prac_7.cpp  ep5_prac_8.cpp  ep6_prac_1.cpp  ep6_prac_2.cpp  ep6_prac_3.cpp  ep6_prac_5.cpp  ep6_prac_6.cpp  ep6_prac_8.cpp  inheritance_prac.cpp  stdc++.h  swap_func.cpp  (+1 more)
headers/: stdc++.h
list_/: 1.cpp
nocmake/: test  test.cpp
