cmake_minimum_required(VERSION 3.17)
project(CPP_proj)

set(CMAKE_CXX_STANDARD 14)
add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")


add_executable(oop1 "Basic_prac/OOP_test1.cpp"  )
add_executable(Inheritance_prac Basic_prac/inheritance_prac.cpp )
add_executable(2dvector_p Basic_prac/2d_vector_prac.cpp )
add_executable(main1 main.cpp  )
add_executable(draft_2 Basic_prac/draft_2.cpp )
add_executable(draft Basic_prac/draft.cpp )
add_executable(cstringio_example Basic_prac/cstringio_example.cpp )
add_executable(cinout Basic_prac/cin_out.cpp )
add_executable(swap Basic_prac/swap_func.cpp )
add_executable(ep2_1 Basic_prac/ep2_prac.cpp )
add_executable(ep2_2 Basic_prac/ep2_prac_2.cpp )
add_executable(ep2_3 Basic_prac/ep2_prac_3.cpp )
add_executable(bondini Basic_prac/bondini.cpp )
add_executable(divide Basic_prac/divide.cpp )
add_executable(ep3_1 Basic_prac/ep3_prac_1.cpp )
add_executable(ep3_2 Basic_prac/ep3_prac_2.cpp )
add_executable(ep3_3 Basic_prac/ep3_prac_3.cpp )
add_executable(ep4_1 Basic_prac/ep4_prac_1.cpp )
add_executable(ep4_2 Basic_prac/ep4_prac_2.cpp )
add_executable(ep4_3 Basic_prac/ep4_prac_3.cpp )
add_executable(ep4_4 Basic_prac/ep4_prac_4.cpp )
add_executable(ep4_5 Basic_prac/ep4_prac_5.cpp )
add_executable(ep4_6 Basic_prac/ep4_prac_6.cpp )
add_executable(5.18 Basic_prac/ep5_5.18.cpp )
add_executable(ep5_1 Basic_prac/ep5_prac_1.cpp )
add_executable(ep5_2 Basic_prac/ep5_prac_2.cpp )
add_executable(ep5_3 Basic_prac/ep5_prac_3.cpp )
add_executable(ep5_4 Basic_prac/ep5_prac_4.cpp )
add_executable(ep5_5 Basic_prac/ep5_prac_5.cpp )
add_executable(ep5_6 Basic_prac/ep5_prac_6.cpp )
add_executable(ep5_7 Basic_prac/ep5_prac_7.cpp )
add_executable(ep5_8 Basic_prac/ep5_prac_8.cpp )
add_executable(ep6_1 Basic_prac/ep6_prac_1.cpp )
add_executable(ep6_2 Basic_prac/ep6_prac_2.cpp )
add_executable(ep6_3 Basic_prac/ep6_prac_3.cpp )
add_executable(ep6_5 Basic_prac/ep6_prac_5.cpp )
add_executable(ep6_6 Basic_prac/ep6_prac_6.cpp )
add_executable(ep6_8 Basic_prac/ep6_prac_8.cpp )
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Basic_prac/ep6-8-file.txt ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
add_executable(7.6 Basic_prac/ep-7-7.6.cpp )
